--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,12 @@
                     <groupId>io.jsonwebtoken</groupId>
                     <artifactId>jjwt</artifactId>
                     <version>0.9.1</version>
-                </dependency>                                    
+                </dependency>  
+                <dependency>
+                    <groupId>jakarta.xml.bind</groupId>
+                    <artifactId>jakarta.xml.bind-api</artifactId>
+                    <version>2.3.2</version>
+                </dependency>                                  
 	 <dependency>
 	  <groupId>org.springframework.data</groupId>
 	  <artifactId>spring-data-jpa</artifactId>
@@ -72,18 +77,6 @@
 	  <version>5.7.4</version>
 	  <type>jar</type>
 	 </dependency>
-	 <dependency>
-	  <groupId>org.springframework.security</groupId>
-	  <artifactId>spring-security-config</artifactId>
-	  <version>5.7.4</version>
-	  <type>jar</type>
-	 </dependency>
-	 <dependency>
-	  <groupId>org.springframework.security</groupId>
-	  <artifactId>spring-security-web</artifactId>
-	  <version>5.7.4</version>
-	 </dependency>
-
             <dependency>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-validation</artifactId>
